--- a/appsscript.json
+++ b/appsscript.json
@@ -1,7 +1,6 @@
 {
   "timeZone": "Asia/Kolkata",
-  "dependencies": {
-  },
+  "dependencies": {},
   "exceptionLogging": "STACKDRIVER",
   "runtimeVersion": "V8"
 }
